[package]
name = "stringerror"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "string based error handling package"
repository = "https://github.com/AstralCupid/stringerror/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
